--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>whooo</title>
   </head>
   <body>
-
+    <h1>whatevs</h1>
   </body>
 </html>
